feat(pea): scalarize ShapeMap existing-key assoc and verify with graphs
Unroll PersistentShapeMap.assoc to one ctor so Graal can PEA ephemeral
rewrites, add host/guest PEA benches and a Seafoam check that searches
low-tier new_* foreign calls, and drop obsolete polyglot module opens.

Signed-off-by: Karl Pietrzak <karl@medplum.com>